<resources>
    <string name="app_name">Laundry App</string>
    <string name="laundry_dinda">Laundry Dinda</string>
    <string name="validasi_nama">Nama Pelanggan tidak boleh kosong</string>
    <string name="validasi_alamat">Alamat Pelanggan tidak boleh kosong</string>
    <string name="validasi_no_hp">Nomor HP pelanggan tidak boleh kosong</string>
    <string name="validasi_cabang">Cabang pelanggan tidak boleh kosong</string>
    <string name="sukses_menambah">Sukses Menambah Data</string>
    <string name="gagal_menambah">Gagal Menambah Data</string>
    <string name="selamatpagi">Selamat Pagi</string>
    <string name="validasi_nama_layanan">Nama Layanan</string>
    <string name="validasi_harga_layanan">Harga Layanan</string>
    <string name="validasi_cabang_layanan">Cabang Layanan</string>
    <string name="sukses_tambah_layanan">Sukses Menambah Layanan</string>
    <string name="sukses_simpan_pelanggan">Data Sukses Disimpan!</string>
    <string name="gagal_simpan_pelanggan">Data Gagal Disimpan</string>
    <string name="selamatdatanglogin">Selamat Datang</string>
    <string name="silahkan_login">Silakan Login Untuk Melanjutkan</string>
    <string name="nohp">Masukkan No HP</string>
    <string name="katasandi">Masukkan Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="selamatsiang">Selamat Siang</string>
    <string name="selamatsore">Selamat Sore</string>
    <string name="selamatmalam">Selamat Malam</string>
    <string name="estimasi">Estimasi Hari Ini</string>
    <string name="transaksimain">Transaksi</string>
    <string name="pelangganmain">Pelanggan</string>
    <string name="laporanmain">Laporan</string>
    <string name="siapmelayani">Siap melayani pelanggan dengan setulus hati</string>
    <string name="jangankecewakan">Jangan Kecewakan Pelanggan</string>
    <string name="akunmain">Akun</string>
    <string name="layanan">Layanan</string>
    <string name="tambahan">Tambahan</string>
    <string name="cabang">Cabang</string>
    <string name="pegawai">Pegawai</string>
    <string name="pencetak">Pencetak</string>
    <string name="simpan">Simpan</string>
    <string name="datapelanggan_transaksi">Data Pelanggan</string>
    <string name="namapelanggan_transaksi">Nama Pelanggan:</string>
    <string name="nohppelanggan_transaksi">No HP:</string>
    <string name="pilihpelanggan_transaksi">Pilih Pelanggan</string>
    <string name="layananutama_transaksi">Layanan Utama</string>
    <string name="namalayanan_transaksi">Nama Layanan:</string>
    <string name="hargalayanan_transaksi">Harga:</string>
    <string name="pilihlayanan_transaksi">Pilih Layanan</string>
    <string name="layanantambahan_transaksi">Layanan Tambahan</string>
    <string name="btntambahan_transaksi">Tambahan</string>
    <string name="btnproses_transaksi">Proses</string>
    <string name="btnhubungi">Hubungi</string>
    <string name="btnlihat">Lihat</string>
    <string name="tambahpelanggan">Tambah Pelanggan</string>
    <string name="tvnamalengkap_tambahpelanggan">Nama Lengkap</string>
    <string name="etnamalengkap_tambahpelanggan">Masukkan Nama Lengkap</string>
    <string name="tvalamat_tambahpelanggan">Alamat</string>
    <string name="etalamat_tambahpelanggan">Masukkan Alamat</string>
    <string name="tvnohpaktif_tambahpelanggan">No HP Aktif</string>
    <string name="etnohpaktif_tambahpelanggan">Masukkan No HP Aktif</string>
    <string name="tvcabang_tambahpelanggan">Cabang</string>
    <string name="etcabang_tambahpelanggan">Masukkan Cabang</string>
    <string name="tambah_pegawai">Tambah Pegawai</string>
    <string name="edit_pegawai">Edit Pegawai</string>
    <string name="tambahlayanan">Tambah Layanan</string>
    <string name="tvnamalayanan_tambahlayanan">Nama Layanan</string>
    <string name="etnamalayanan_tambahlayanan">Masukkan Nama Layanan</string>
    <string name="etharga_tambahlayanan">Masukkan Harga Layanan</string>
    <string name="tvcabang_tambahlayanan">Cabang</string>
    <string name="etcabang_tambahlayanan">Masukkan Cabang</string>
    <string name="tvharga_tambahlayanan">Harga</string>
    <string name="tambahtambahan">Tambah Tambahan</string>
    <string name="tvnamatambahan_tambahtambahan">Nama Tambahan</string>
    <string name="etnamatambahan_tambahtambahan">Masukkan Nama Tambahan</string>
    <string name="tvhargatambahan_tambahtambahan">Harga Tambahan</string>
    <string name="ethargatambahan">Masukkan Harga Tambahan</string>
    <string name="tambahpegawai">Tambah Pegawai</string>
    <string name="tvnamalengkap_tambahpegawai">Nama Lengkap</string>
    <string name="etnamalengkap_tambahpegawai">Masukkan Nama Lengkap</string>
    <string name="tvalamat_tambahpegawai">Alamat</string>
    <string name="etalamat_tambahpegawai">Masukkan Alamat Pegawai</string>
    <string name="tvnohpaktif_tambahpegawai">No HP Aktif</string>
    <string name="etnohpaktif_tambahpegawai">Masukkan No HP Aktif</string>
    <string name="tvcabang_tambahpegawai">Cabang</string>
    <string name="etcabang_tambahpegawai">Masukkan Cabang</string>
    <string name="tvNoHP_cabang">No HP</string>
    <string name="tvAlamat_cabang">Alamat</string>
    <string name="tvNamaCabang_cabang">Nama Cabang</string>
    <string name="tvIDCabang_cabang">ID Cabang</string>
    <string name="Datacabangkosong">Data cabang kosong</string>
    <string name="datacabangberhasildisimpan">Data cabang berhasil disimpan</string>
    <string name="Datacabangsucceeddelete">Data cabang berhasil dihapus</string>
    <string name="idcabangtakvalid">ID cabang tidak valid</string>
    <string name="idcabang">ID Cabang</string>
    <string name="tambahcabang">Tambah Cabang</string>
    <string name="NamaCabang">Nama Cabang</string>
    <string name="hapus">Hapus</string>
    <string name="lihat">Lihat</string>
    <string name="hubungi">Hubungi</string>
    <string name="idpelanggan">ID Pelanggan</string>
    <string name="terdaftar">Terdaftar</string>
    <string name="idtambahan">ID Tambahan</string>
    <string name="namatambahan">Nama Tambahan</string>
    <string name="sunting">Sunting</string>
    <string name="detailcabang">Detail Cabang</string>
    <string name="idlayanan">ID Layanan</string>
    <string name="detaillayanan">Detail Layanan</string>
    <string name="namalayanan">Nama Layanan</string>
    <string name="harga">Harga</string>
    <string name="detailpegawai">Detail Pegawai</string>
    <string name="idpegawai">ID Pegawai</string>
    <string name="nama">Nama</string>
    <string name="detailpelanggan">Detail Pelanggan</string>
    <string name="namapelanggan">Nama Pelanggan</string>
    <string name="namapegawai">Nama Pegawai</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="pilihmetodepembayaran">Pilih Metode Pembayaran</string>
    <string name="bayarnanti">Bayar Nanti</string>
    <string name="tunai">Tunai</string>
    <string name="detaillayanantambahan">Detail Layanan Tambahan</string>
    <string name="konfirmasidata">Konfirmasi Data</string>
    <string name="totalbayar">Total Bayar</string>
    <string name="batal">Batal</string>
    <string name="idtransaksi">ID Transaksi</string>
    <string name="tanggal">Tanggal</string>
    <string name="status">Status</string>
    <string name="hargalayanan">Harga Layanan</string>
    <string name="rinciantambahan">Rincian Tambahan</string>
    <string name="subtotaltambahan">Subtotal Tambahan:</string>
    <string name="kirimwhatsapp">Kirim WhatsApp</string>
    <string name="cetakinvoice">Cetak Invoice</string>
    <string name="LoginBerhasil">Login Berhasil!</string>
    <string name="Passwordsalah">Password Salah</string>
    <string name="Datapenggunatidakvalid">Data Pengguna Tidak Valid</string>
    <string name="Nomorbelumterdaftar">Nomor Belum Terdaftar</string>
    <string name="Registerberhasil">Register Berhasil!</string>
    <string name="Silakandaftaruntukmelanjutkan">Silakan daftar untuk membuat akun baru</string>
    <string name="sudahmemilikiakun">Sudah memiliki akun?</string>
    <string name="belummemilikiakun">Belum Memiliki Akun?</string>
    <string name="daftarsekarang">Daftar Sekarang</string>
    <string name="masuksekarang">Masuk Sekarang</string>
    <string name="daftar">Daftar</string>
    <string name="namalengkap_register">Masukkan Nama Lengkap</string>
    <string name="nama_tidak_tersedia">Nama tidak tersedia</string>
    <string name="tidak_tersedia">Tidak tersedia</string>
    <string name="alamat_format">Alamat : %1$s</string>
    <string name="no_hp_format">No HP : %1$s</string>
    <string name="harga_format">Harga: Rp %1$d</string>
    <string name="validasi_nama_pegawai">Nama Pegawai tidak boleh kosong</string>
    <string name="validasi_alamat_pegawai">Alamat Pegawai tidak boleh kosong</string>
    <string name="validasi_no_hp_pegawai">No HP Pegawai tidak boleh kosong</string>
    <string name="validasi_cabang_pegawai">Cabang Pegawai tidak boleh kosong</string>
</resources>