<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/datapelanggan"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent"
    app:cardCornerRadius="20dp"
    android:layout_margin="20dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvDataIDPelanggan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/idpelanggan"
            />
        <TextView
            android:id="@+id/tvDataNamaPelanggan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/namapelanggan_transaksi"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            />
        <TextView
            android:id="@+id/tvDataAlamatPelanggan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvAlamat_cabang"
            android:textSize="16sp"
            android:paddingTop="8dp"
            />
        <TextView
            android:id="@+id/tvDataNoHpPelanggan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nohp"
            android:textSize="16sp"
            android:paddingTop="8dp"
            />
        <TextView
            android:id="@+id/tvDataCabangPelanggan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cabang"
            android:textSize="16sp"
            android:paddingTop="8dp"
            />
        <TextView
            android:id="@+id/tvDataTerdaftarPelanggan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terdaftar"
            android:textSize="16sp"
            android:paddingTop="8dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:paddingTop="8dp"
            >
            <Button
                android:layout_weight="1"
                android:id="@+id/btDataHubungiPelanggan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#22c55e"
                android:padding="16dp"
                android:text="@string/hubungi"
                android:textColor="@color/white"
                android:layout_marginRight="5dp"/>
            <Button
                android:layout_weight="1"
                android:id="@+id/btnDataLihatPelanggan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#f59e0b"
                android:padding="16dp"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:text="@string/lihat"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
