<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tambah_tambahan"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvJudulTambahan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:text="@string/tambahtambahan"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvnamatambahan"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:text="@string/tvnamatambahan_tambahtambahan"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etnamatambahan"
                android:layout_marginTop="-10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:inputType="textPersonName"
                android:background="@android:drawable/edit_text"
                android:hint="@string/etnamatambahan_tambahtambahan"
                android:padding="12dp" />

            <TextView
                android:id="@+id/tvtambahan_harga"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:text="@string/tvhargatambahan_tambahtambahan"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ettambahanharga"
                android:layout_marginTop="-10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@android:drawable/edit_text"
                android:hint="@string/ethargatambahan"
                android:inputType="phone"
                android:maxLength="14"
                android:padding="12dp" />

            <Button
                android:id="@+id/btsimpan_tambahtambahan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#778899"
                android:padding="12dp"
                android:text="@string/simpan"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>